poke at registries